<resources>
    <string name="app_name">Clickn Jobs</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="qualification">Qualification</string>
    <string name="gender">Gender</string>
    <string name="age"> </string>
    <string name="email">Email</string>
    <string name="apply">Apply</string>
</resources>
