<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:title="Application Form"
        app:titleTextColor="@color/colorButtonText"
        android:background="@color/colorToolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_name"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/editText_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:autofillHints="" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_email"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/editText_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:autofillHints="" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_age"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/age" />

                    <EditText
                        android:id="@+id/editText_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_gender"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/gender" />

                    <EditText
                        android:id="@+id/editText_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_qualification"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/qualification" />

                    <EditText
                        android:id="@+id/editText_qualification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="50dp">

                    <Button
                        android:id="@+id/button_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onCancelClick"
                        android:textColor="@color/colorButtonText"
                        android:background="@color/colorPrimary"
                        android:layout_margin="5dp"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/button_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onSendClick"
                        android:textColor="@color/colorButtonText"
                        android:background="@color/colorPrimary"
                        android:layout_margin="5dp"
                        android:text="@string/send" />
                </LinearLayout>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</RelativeLayout>